<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              tools:context="pl.edu.pja.s13868.miniproject1.ui.activity.MyOptionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/font_size_text"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/font_size_text"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/fontSizeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_color_text"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/font_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/font_color_text"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_options_button"
        android:textColor="#000000"/>

</LinearLayout>
